--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   height: 100vh;
-  background-color: rgb(20, 20, 20);
+  background-color: #4a6ab3;
   overflow: scroll;
   text-align: center;
   overflow: hidden;
@@ -47,6 +47,8 @@
 
 .cta-button {
   height: 45px;
+  max-width: 300px;
+  margin: auto;
   border: 0;
   width: auto;
   padding-left: 40px;
@@ -68,7 +70,8 @@
   background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
-  margin-left: 10px;
+  color: white;
+  margin-top: 50px;
 }
 
 .footer-container {
